--- a/app/src/main/res/layout/fragment_allowance_overview.xml
+++ b/app/src/main/res/layout/fragment_allowance_overview.xml
@@ -4,10 +4,9 @@
     tools:context="com.lemnik.claim.ui.AllowanceOverviewFragment">
 
     <data>
-
         <variable
             name="presenter"
-            type="com.lemnik.claim.ui.presenters.AllowancePresenter" />
+            type="com.lemnik.claim.ui.presenters.AllowanceOverviewPresenter" />
     </data>
 
     <android.support.constraint.ConstraintLayout
@@ -35,10 +34,11 @@
             android:layout_marginTop="8dp"
             android:gravity="center"
             android:minWidth="50dp"
-            android:text="@{Integer.toString(presenter.spendStats.total) ?? `0`}"
+            android:text="@{Integer.toString(presenter.spendingStats.total) ?? `0`}"
             android:textAppearance="@style/TextAppearance.AppCompat.Display1"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/totalLabel" />
+            app:layout_constraintTop_toBottomOf="@+id/totalLabel"
+            android:layout_marginRight="8dp" />
 
         <TextView
             android:id="@+id/weekLabel"
@@ -52,7 +52,8 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             app:layout_constraintEnd_toEndOf="@+id/week"
             app:layout_constraintStart_toStartOf="@+id/week"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginRight="0dp" />
 
         <TextView
             android:id="@+id/week"
@@ -62,7 +63,7 @@
             android:layout_marginTop="8dp"
             android:gravity="center"
             android:minWidth="50dp"
-            android:text="@{Integer.toString(presenter.spendStats.thisWeek) ?? `0`}"
+            android:text="@{Integer.toString(presenter.spendingStats.thisWeek) ?? `0`}"
             android:textAppearance="@style/TextAppearance.AppCompat.Display1"
             app:layout_constraintEnd_toStartOf="@+id/total"
             app:layout_constraintTop_toBottomOf="@+id/weekLabel" />
@@ -79,7 +80,8 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             app:layout_constraintEnd_toEndOf="@+id/today"
             app:layout_constraintStart_toStartOf="@+id/today"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginRight="0dp" />
 
         <TextView
             android:id="@+id/today"
@@ -89,10 +91,11 @@
             android:layout_marginTop="8dp"
             android:gravity="center"
             android:minWidth="50dp"
-            android:text="@{Integer.toString(presenter.spendStats.today) ?? `0`}"
+            android:text="@{Integer.toString(presenter.spendingStats.today) ?? `0`}"
             android:textAppearance="@style/TextAppearance.AppCompat.Display1"
             app:layout_constraintEnd_toStartOf="@+id/week"
-            app:layout_constraintTop_toBottomOf="@+id/todayLabel" />
+            app:layout_constraintTop_toBottomOf="@+id/todayLabel"
+            android:layout_marginRight="8dp" />
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/textInputLayout"
@@ -111,8 +114,8 @@
                 android:layout_height="wrap_content"
                 android:hint="@string/allowance"
                 android:inputType="number"
-                android:text="@{Integer.toString(presenter.allowance.amountPerDay)}"
-                app:onFocusChanged="@{(view, hasFocus) -> !hasFocus ? presenter.updateAllowance(((android.widget.TextView)view).text) : null}" />
+                android:text="@{presenter.allowance.amountPerDay > 0 ? Integer.toString(presenter.allowance.amountPerDay) : ``}"
+                android:onTextChanged="@{(text, start, before, end) -> presenter.updateAllowance(text)}" />
         </android.support.design.widget.TextInputLayout>
 
     </android.support.constraint.ConstraintLayout>
