--- a/app/src/main/res/layout/activity_overview.xml
+++ b/app/src/main/res/layout/activity_overview.xml
@@ -15,16 +15,9 @@
         android:layout_height="wrap_content">
 
         <fragment
+            class="com.lemnik.claim.ui.AllowanceOverviewFragment"
             android:id="@+id/allowance_overview"
-            android:name="com.lemnik.claim.ui.AllowanceOverviewFragment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </android.support.v7.widget.CardView>
-
-    <Button
-        android:layout_marginTop="50dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="onUpdateSpending"
-        android:text="Update Spending" />
 </LinearLayout>
