--- a/app/src/main/res/layout/fragment_allowance_overview.xml
+++ b/app/src/main/res/layout/fragment_allowance_overview.xml
@@ -4,6 +4,7 @@
     tools:context="com.lemnik.claim.ui.AllowanceOverviewFragment">
 
     <data>
+
         <variable
             name="presenter"
             type="com.lemnik.claim.ui.presenters.AllowanceOverviewPresenter" />
@@ -17,9 +18,9 @@
             android:id="@+id/totalLabel"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="@dimen/grid_spacer1"
             android:gravity="center"
-            android:minWidth="50dp"
+            android:minWidth="@dimen/allowance_overview_label_min_width"
             android:text="@string/label_total"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             app:layout_constraintEnd_toEndOf="@+id/total"
@@ -30,40 +31,38 @@
             android:id="@+id/total"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginEnd="@dimen/grid_spacer1"
+            android:layout_marginTop="@dimen/grid_spacer1"
             android:gravity="center"
-            android:minWidth="50dp"
-            android:text="@{Integer.toString(presenter.spendingStats.total) ?? `0`}"
+            android:minWidth="@dimen/allowance_overview_label_min_width"
+            android:text='@{Integer.toString(presenter.spendingStats.total) ?? "0"}'
             android:textAppearance="@style/TextAppearance.AppCompat.Display1"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/totalLabel"
-            android:layout_marginRight="8dp" />
+            app:layout_constraintTop_toBottomOf="@+id/totalLabel" />
 
         <TextView
             android:id="@+id/weekLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="0dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="@dimen/grid_spacer1"
             android:gravity="center"
-            android:minWidth="50dp"
+            android:minWidth="@dimen/allowance_overview_label_min_width"
             android:text="@string/label_week"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             app:layout_constraintEnd_toEndOf="@+id/week"
             app:layout_constraintStart_toStartOf="@+id/week"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginRight="0dp" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/week"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginEnd="@dimen/grid_spacer1"
+            android:layout_marginTop="@dimen/grid_spacer1"
             android:gravity="center"
-            android:minWidth="50dp"
-            android:text="@{Integer.toString(presenter.spendingStats.thisWeek) ?? `0`}"
+            android:minWidth="@dimen/allowance_overview_label_min_width"
+            android:text='@{Integer.toString(presenter.spendingStats.thisWeek) ?? "0"}'
             android:textAppearance="@style/TextAppearance.AppCompat.Display1"
             app:layout_constraintEnd_toStartOf="@+id/total"
             app:layout_constraintTop_toBottomOf="@+id/weekLabel" />
@@ -73,37 +72,35 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="0dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="@dimen/grid_spacer1"
             android:gravity="center"
-            android:minWidth="50dp"
+            android:minWidth="@dimen/allowance_overview_label_min_width"
             android:text="@string/label_today"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             app:layout_constraintEnd_toEndOf="@+id/today"
             app:layout_constraintStart_toStartOf="@+id/today"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginRight="0dp" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/today"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginEnd="@dimen/grid_spacer1"
+            android:layout_marginTop="@dimen/grid_spacer1"
             android:gravity="center"
-            android:minWidth="50dp"
-            android:text="@{Integer.toString(presenter.spendingStats.today) ?? `0`}"
+            android:minWidth="@dimen/allowance_overview_label_min_width"
+            android:text='@{Integer.toString(presenter.spendingStats.today) ?? "0"}'
             android:textAppearance="@style/TextAppearance.AppCompat.Display1"
             app:layout_constraintEnd_toStartOf="@+id/week"
-            app:layout_constraintTop_toBottomOf="@+id/todayLabel"
-            android:layout_marginRight="8dp" />
+            app:layout_constraintTop_toBottomOf="@+id/todayLabel" />
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/textInputLayout"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginEnd="@dimen/grid_spacer1"
+            android:layout_marginStart="@dimen/grid_spacer1"
+            android:layout_marginTop="@dimen/grid_spacer1"
             app:layout_constraintBottom_toBottomOf="@+id/today"
             app:layout_constraintEnd_toStartOf="@+id/today"
             app:layout_constraintStart_toStartOf="parent"
@@ -112,10 +109,10 @@
             <android.support.design.widget.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/allowance"
+                android:hint="@string/label_daily_allowance"
                 android:inputType="number"
-                android:text="@{presenter.allowance.amountPerDay > 0 ? Integer.toString(presenter.allowance.amountPerDay) : ``}"
-                android:onTextChanged="@{(text, start, before, end) -> presenter.updateAllowance(text)}" />
+                android:onTextChanged="@{(text, start, before, end) -> presenter.updateAllowance(text)}"
+                android:text='@{presenter.allowance.amountPerDay > 0 ? Integer.toString(presenter.allowance.amountPerDay) : ""}' />
         </android.support.design.widget.TextInputLayout>
 
     </android.support.constraint.ConstraintLayout>
