--- a/app/src/main/res/layout/activity_overview.xml
+++ b/app/src/main/res/layout/activity_overview.xml
@@ -1,23 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="com.lemnik.claim.OverviewActivity"
-    android:padding="@dimen/grid_spacer1"
-    android:clipChildren="false"
-    android:clipToPadding="false">
+    tools:context="com.lemnik.claim.OverviewActivity">
 
-    <android.support.v7.widget.CardView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:clipToPadding="false"
+        android:orientation="vertical"
+        android:paddingBottom="@dimen/grid_spacer1"
+        android:paddingTop="@dimen/grid_spacer1">
 
         <fragment
-            class="com.lemnik.claim.ui.AllowanceOverviewFragment"
             android:id="@+id/allowance_overview"
+            class="com.lemnik.claim.ui.AllowanceOverviewFragment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
-    </android.support.v7.widget.CardView>
-</LinearLayout>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/claim_items"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="@dimen/grid_spacer1"
+            android:clipToPadding="false"
+            android:paddingLeft="@dimen/grid_spacer1"
+            android:paddingRight="@dimen/grid_spacer1"
+            app:layoutManager="android.support.v7.widget.LinearLayoutManager" />
+
+    </LinearLayout>
+
+    <fragment
+        android:id="@+id/new_claim_item"
+        class="com.lemnik.claim.ui.NewClaimItemFloatingActionButtonFragment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin" />
+</FrameLayout>
