--- a/app/src/main/res/layout/fragment_allowance_overview.xml
+++ b/app/src/main/res/layout/fragment_allowance_overview.xml
@@ -4,6 +4,7 @@
     tools:context="com.lemnik.claim.ui.AllowanceOverviewFragment">
 
     <data>
+
         <variable
             name="presenter"
             type="com.lemnik.claim.ui.presenters.AllowanceOverviewPresenter" />
@@ -35,9 +36,10 @@
             android:gravity="center"
             android:minWidth="@dimen/allowance_overview_label_min_width"
             android:text='@{Integer.toString(presenter.spendingStats.total) ?? "0"}'
-            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/totalLabel" />
+            app:layout_constraintTop_toBottomOf="@+id/totalLabel"
+            tools:text="200" />
 
         <TextView
             android:id="@+id/weekLabel"
@@ -62,9 +64,10 @@
             android:gravity="center"
             android:minWidth="@dimen/allowance_overview_label_min_width"
             android:text='@{Integer.toString(presenter.spendingStats.thisWeek) ?? "0"}'
-            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
             app:layout_constraintEnd_toStartOf="@+id/total"
-            app:layout_constraintTop_toBottomOf="@+id/weekLabel" />
+            app:layout_constraintTop_toBottomOf="@+id/weekLabel"
+            tools:text="150" />
 
         <TextView
             android:id="@+id/todayLabel"
@@ -85,13 +88,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/grid_spacer1"
-            android:layout_marginTop="@dimen/grid_spacer1"
+            android:layout_marginTop="8dp"
             android:gravity="center"
             android:minWidth="@dimen/allowance_overview_label_min_width"
             android:text='@{Integer.toString(presenter.spendingStats.today) ?? "0"}'
-            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
             app:layout_constraintEnd_toStartOf="@+id/week"
-            app:layout_constraintTop_toBottomOf="@+id/todayLabel" />
+            app:layout_constraintTop_toBottomOf="@+id/todayLabel"
+            tools:text="100" />
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/textInputLayout"
@@ -111,7 +115,7 @@
                 android:hint="@string/label_daily_allowance"
                 android:inputType="number"
                 android:onTextChanged="@{(text, start, before, end) -> presenter.updateAllowance(text)}"
-                android:text='@{presenter.allowance.amountPerDay > 0 ? Integer.toString(presenter.allowance.amountPerDay) : ""}' />
+                android:text='@{presenter.allowance > 0 ? Integer.toString(presenter.allowance) : ""}' />
         </android.support.design.widget.TextInputLayout>
 
     </android.support.constraint.ConstraintLayout>
