--- a/app/src/main/res/layout/fragment_claim_capture_details.xml
+++ b/app/src/main/res/layout/fragment_claim_capture_details.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -46,5 +47,8 @@
         android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/description_layout" />
+        app:layout_constraintTop_toBottomOf="@+id/description_layout" >
+
+    </com.lemnik.claim.widget.DatePickerLayout>
+
 </android.support.constraint.ConstraintLayout>
