Ch8 - StackView implementation

--- a/app/src/main/res/layout/card_claim_item.xml
+++ b/app/src/main/res/layout/card_claim_item.xml
@@ -17,7 +17,9 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/grid_spacer1">
+        android:layout_marginTop="@dimen/grid_spacer1"
+        android:foreground="?attr/selectableItemBackground"
+        android:onClick="@{() -> presenter.viewClaimItem(item)}">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
