Ch11 - Custom styles & animating ViewStub inflation

--- a/app/src/main/res/layout/fragment_claim_capture_details.xml
+++ b/app/src/main/res/layout/fragment_claim_capture_details.xml
@@ -34,6 +34,7 @@
 
         <EditText
             android:id="@+id/amount"
+            style="@style/AmountInput"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/label_amount"
@@ -47,7 +48,7 @@
         android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/description_layout" >
+        app:layout_constraintTop_toBottomOf="@+id/description_layout">
 
     </com.lemnik.claim.widget.DatePickerLayout>
 
