--- a/app/src/main/res/values/attrs_spending_graph_view.xml
+++ b/app/src/main/res/values/attrs_spending_graph_view.xml
@@ -1,7 +1,6 @@
 <resources>
     <declare-styleable name="SpendingGraphView">
-        <attr name="positiveColor" format="color" />
-        <attr name="negativeColor" format="color" />
-        <attr name="targetColor" format="color" />
+        <attr name="strokeColor" format="color" />
+        <attr name="strokeWidth" format="dimension" />
     </declare-styleable>
 </resources>
