--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,5 +6,6 @@
     <dimen name="allowance_overview_label_min_width">50dp</dimen>
     <dimen name="app_bar_height">180dp</dimen>
     <dimen name="text_margin">16dp</dimen>
-    <dimen name="spending_graph_height">220dp</dimen>
+    <dimen name="spending_graph_height">80dp</dimen>
+    <dimen name="bouncing_icon_size">32dp</dimen>
 </resources>
